gccida/g0/pre_insert_copies
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pre_insert_copies/src/gcse.c:5352:20: error: expected identifier or '('
for (  struct expr = expr_hash_table[i]; expr;  struct expr = expr->next_same_hash ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pre_insert_copies/src/gcse.c:5352:42: error: expected ';' in 'for' statement specifier
for (  struct expr = expr_hash_table[i]; expr;  struct expr = expr->next_same_hash ) 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pre_insert_copies/src/gcse.c:5352:49: error: expected expression
for (  struct expr = expr_hash_table[i]; expr;  struct expr = expr->next_same_hash ) 
                                                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pre_insert_copies/src/gcse.c:5352:49: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pre_insert_copies/src/gcse.c:5352:5: note: to match this '('
for (  struct expr = expr_hash_table[i]; expr;  struct expr = expr->next_same_hash ) 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pre_insert_copies/src/gcse.c:5356:20: error: expected identifier or '('
for (  struct occr = expr->antic_occr; occr;  struct occr = occr->next ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pre_insert_copies/src/gcse.c:5356:40: error: expected ';' in 'for' statement specifier
for (  struct occr = expr->antic_occr; occr;  struct occr = occr->next ) 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pre_insert_copies/src/gcse.c:5356:47: error: expected expression
for (  struct occr = expr->antic_occr; occr;  struct occr = occr->next ) 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pre_insert_copies/src/gcse.c:5356:47: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pre_insert_copies/src/gcse.c:5356:5: note: to match this '('
for (  struct occr = expr->antic_occr; occr;  struct occr = occr->next ) 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pre_insert_copies/src/gcse.c:5364:48: error: use of undeclared identifier 'uid_cuid_1'
&& ( ( pre_redundant_insns->elms[*( ( _DWORD *)uid_cuid_1 + insn->fld[0].rtint) >> 6] >> ( *( ( _BYTE *)uid_cuid_1 + 4 * insn->fld[0].rtint) & 0x3F)) & 1) == 0 ) 
                                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pre_insert_copies/src/gcse.c:5364:105: error: use of undeclared identifier 'uid_cuid_1'
&& ( ( pre_redundant_insns->elms[*( ( _DWORD *)uid_cuid_1 + insn->fld[0].rtint) >> 6] >> ( *( ( _BYTE *)uid_cuid_1 + 4 * insn->fld[0].rtint) & 0x3F)) & 1) == 0 ) 
                                                                                                        ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pre_insert_copies/src/obj/gcse.o] Error 1
